--- a/xtr.html
+++ b/xtr.html
@@ -1,7 +1,7 @@
 ﻿
 <p>新唐人在线高速播放</p>
 
-<script type="text/javascript" src="https://0pheeee44m48.511as3.ml/images/jwplayer.js"></script>
+<script type="text/javascript" src="https://0pheee7t504n.511as2.ga/images/jwplayer.js"></script>
 <div id="myvideo_1">Please install Flash to see this player.</div>
 <script type="text/javascript">
 jwplayer('myvideo_1').setup({
